got post function working